--- a/app/src/main/res/layout/activity_drive.xml
+++ b/app/src/main/res/layout/activity_drive.xml
@@ -21,13 +21,11 @@
 
         <View
             android:layout_width="@dimen/vs_5"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/vs_25"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/vs_8"
-            android:layout_marginEnd="@dimen/vs_12"
-            android:layout_marginRight="@dimen/vs_12"
-            android:layout_marginBottom="@dimen/vs_8"
-            android:background="?attr/color_theme" />
+            android:layout_marginEnd="@dimen/vs_10"
+            android:layout_marginRight="@dimen/vs_10"
+            android:background="@drawable/button_detail_collect" />
 
         <TextView
             android:id="@+id/textView"
